--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         <header>
             <h1>Aprendendo Git!</h1>
         </header>
+        <nav>
+            <ul>
+                <li>Inicio</li>
+                <li>Produtos</li>
+                <li>Serviços</li>
+                <li>Suporte</li>
+            </ul>
+        </nav>
+        <main>
+            
+        </main>
     </div>
 </body>
 </html>
