Updating navigation menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li>Produtos</li>
                 <li>Serviços</li>
                 <li>Suporte</li>
+                <li>Noticias</li>
+                <li>Politicas de Privacidades</li>
             </ul>
         </nav>
         <main>
