--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <h1>Aprendendo Git!</h1>
+            <h2>ADS - Fatec Jales</h2>
         </header>
         <nav>
             <ul>
