--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
                 <li>Politicas de Privacidades</li>
             </ul>
         </nav>
+        <aside>
+            <ul>
+                <li>Fatec</li>
+            </ul>
+        </aside>
         <main>
             <header>
                 <small>ADS - FATEC JALES</small>
+                <p>If I am waiting in a pub, can I be a waiter?</p>
             </header>
         </main>
     </div>
