new config and html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li>Promoções</li>
                 <li>Noticias</li>
                 <li>Politicas de Privacidades</li>
+                <li>Fatec Jales</li>
             </ul>
         </nav>
         <aside>
