--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
         </header>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>Produtos</li>
-                <li>Serviços</li>
-                <li>Suporte</li>
-                <li>Promoções</li>
-                <li>Noticias</li>
-                <li>Politicas de Privacidades</li>
+                <li>Home</li>
+                <li>Products</li>
+                <li>Services</li>
+                <li>Support</li>
+                <li>Privacy Policy</li>
                 <li>Fatec Jales</li>
             </ul>
         </nav>
