--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
         </header>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>Produtos</li>
-                <li>Serviços</li>
-                <li>Suporte</li>
+                <li>Staer</li>
+                <li>Nossos Produtos</li>
+                <li>O que fazemos?</li>
+                <li>Fale conosco</li>
                 <li>Promoções</li>
-                <li>Noticias</li>
                 <li>Politicas de Privacidades</li>
-                <li>Fatec Jales</li>
             </ul>
         </nav>
         <aside>
